# Beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
launch/: record_bag.launch.py  talker_listener.launch.py
output_bag/: metadata.yaml  output_bag_0.db3
results/: frames_2023-11-16_16.07.27.gv
src/: change_string_client.cpp  listener.cpp  talker.cpp
srv/: ChangeString.srv
test/: test_talker.cpp
